--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <h1>Welcome to My Portfolio</h1>
     <p>Hello! My name is Sunakshi.</p>
     <p>I'm learning Git and GitHub.</p>
-    <h2>Projects</h2>
+    <h2>Project</h2>
     <ul>
-        <li>Project 1: [Description]</li>
-        <li>Project 2: [Description]</li>
+        <li>Project 1:
+            This project is my first personal portfolio website, designed to showcase my skills, projects, and experience in web development.
+            In this project, you will create a simple personal portfolio website and use Git and GitHub to manage the version control of your project.
+            You'll create a repository, track changes, and collaborate (if desired). The website can be as simple as an HTML page with your personal information, 
+            skills, and projects.
+
+            Key Skills You Will Learn:
+              -> Initializing a Git repository
+              -> Staging and committing changes
+              ->Creating branches and merging
+              ->Pushing your work to GitHub
+              ->Collaborating with others using pull requests (optional)
+        </li>
+        
     </ul>
 </body>
 </html>
